--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69717b">  <td>19/02/23 22:08:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:1, instance:com.cleartrip.qa.testcases.LoginTest@3bfdc050]">Login</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:08:37</td>   <td>29278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.VerifyLogo()[pri:1, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">VerifyLogo</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:09</td>   <td>61668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.clickRoundTrip()[pri:3, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">clickRoundTrip</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:00</td>   <td>52261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.pageTitle()[pri:2, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">pageTitle</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/02/23 22:07:54</td>   <td>-13882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.cleartrip.qa.testcases.LoginTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:08:22</td>   <td>14542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:08:53</td>   <td>44886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:01</td>   <td>53216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:10</td>   <td>62393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/02/23 22:08:22</td>   <td>14541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.teardown()[pri:0, instance:com.cleartrip.qa.testcases.LoginTest@3bfdc050]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:08:52</td>   <td>43922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:00</td>   <td>52270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:09</td>   <td>61702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:18</td>   <td>70327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/02/23 22:09:18</td>   <td>70321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.verifySign()[pri:4, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">verifySign</td> 
-  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:36:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.VerifyLogo()[pri:1, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">VerifyLogo</td> 
+  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:38:08</td>   <td>108167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.clickRoundTrip()[pri:3, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">clickRoundTrip</td> 
+  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:37:06</td>   <td>45592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.pageTitle()[pri:2, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">pageTitle</td> 
+  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:36:03</td>   <td>-16772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:36:27</td>   <td>6526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:37:06</td>   <td>46309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:36:26</td>   <td>5869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:37:06</td>   <td>45614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
+<tr bgcolor="f56bcc">  <td>19/02/23 23:38:19</td>   <td>118683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@31368b99]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@232307208</td>   <td></td> </tr>
 </table>
